--- a/style.css
+++ b/style.css
@@ -1,6 +1,155 @@
 body {
-    /* Set line height to 1.5 times the font size
-         and use the OS’s UI font as the website font
-       */
-    font: 100%/1.5 system-ui;
-  }
+  /* Set line height to 1.5 times the font size
+       and use the OS’s UI font as the website font
+     */
+  font: 100%/1.5 system-ui;
+  max-width: 100ch;
+  margin-inline: max(1em, (100% - 100ch) / 2);;
+  padding: 4ch;
+}
+
+img {
+max-width: 90%;
+height: auto;
+}
+
+nav ul, 
+nav li {
+display: contents;
+}
+
+nav {
+display: flex;
+gap: 1ch;
+margin-bottom: 2rem;
+border-bottom: 1px solid oklch(80% 3% 200);
+}
+
+nav a {
+flex: 1;
+text-decoration: none;
+color: inherit;
+text-align: center;
+padding: 0.5em;
+/* border-bottom: 0.4em solid transparent; */
+}
+
+nav a.current {
+font-weight: bold;
+border-bottom: 0.4em solid oklch(80% 3% 200);
+padding-bottom: 0.3em;
+}
+
+html {
+--color-accent: oklch(85% 0.1 330);
+accent-color: var(--color-accent);
+}
+
+nav a:hover {
+border-bottom: 0.4em solid var(--color-accent);
+background-color: oklch(from var(--color-accent) 95% 5% h);
+padding-bottom:0.3em;
+}
+
+input, textarea, button {
+font: inherit;
+}
+
+/* form label,
+form input,
+form textarea,
+form button {
+display: block;
+width: 100%;
+box-sizing: border-box;
+} */
+
+/* 
+form label {
+margin-block: 0.5em;  
+font-weight: bold;  
+}
+
+form input,
+form textarea {
+padding: 0.5em;
+border: 1px solid oklch(85% 0.05 250); 
+border-radius: 0.25em;
+}
+
+form button {
+margin-top: 1em;
+padding: 0.75em 1.5em;
+border: none;
+border-radius: 0.25em;
+cursor: pointer;
+}
+
+form button:hover {
+background-color: oklch(from var(--color-accent) 70% 0.1 h);
+} */
+
+form {
+display: grid;
+grid-template-columns: auto 1fr;
+gap: 1em;
+}
+
+form label {
+display: grid;
+grid-template-columns: subgrid;
+grid-column: 1 / -1;
+margin-block: 0.5em;
+}
+
+form input,
+form textarea {
+width: 100%;
+box-sizing: border-box;
+padding: 0.5em;
+border: 1px solid oklch(85% 0.05 250);
+border-radius: 0.25em;
+}
+
+form button {
+grid-column: 1 / -1;
+margin-top: 1em;
+padding: 0.75em 1.5em;
+border: none;
+border-radius: 0.25em;
+cursor: pointer;
+}
+
+.projects {
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+gap: 1em;
+}
+
+.project {
+display: grid;
+grid-template-rows: subgrid;
+grid-row: span 3;
+padding: 1em;
+}
+
+.project h2 {
+margin: 0;
+}
+
+.project img {
+width: 100%;
+height: auto;
+}
+
+h1 {
+font-size: 4em;
+font-weight: bold;
+}
+
+h1, h2, h3, h4, h5, h6 {
+line-height: 1.1;
+text-wrap: balance;
+margin: 0.5em 0;
+}
+
