--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@ display: contents;
 }
 
 nav {
+--border-color: oklch(50% 10% 200 / 40%);
 display: flex;
 gap: 1ch;
 margin-bottom: 2rem;
-border-bottom: 1px solid oklch(80% 3% 200);
+border-bottom: 1px solid; 
+border-bottom-color: var(--border-color);
 }
 
 nav a {
@@ -31,27 +33,28 @@ text-decoration: none;
 color: inherit;
 text-align: center;
 padding: 0.5em;
-/* border-bottom: 0.4em solid transparent; */
 }
 
 nav a.current {
 font-weight: bold;
-border-bottom: 0.4em solid oklch(80% 3% 200);
+border-bottom: 0.4em solid var(--border-color);
 padding-bottom: 0.3em;
 }
 
 html {
+color-scheme: dark light;
 --color-accent: oklch(85% 0.1 330);
 accent-color: var(--color-accent);
 }
 
 nav a:hover {
 border-bottom: 0.4em solid var(--color-accent);
-background-color: oklch(from var(--color-accent) 95% 5% h);
+/* background-color: oklch(from var(--color-accent) 95% 5% h); */
 padding-bottom:0.3em;
+background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
 
-input, textarea, button {
+input, textarea, button, select {
 font: inherit;
 }
 
@@ -172,3 +175,26 @@ section ul li {
 .project {
   color: oklch(75% 0.1 330);
 }
+
+.color-scheme {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 80%;
+  font-weight: normal;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+
+html[style*="color-scheme: dark"] section {
+  background-color: oklch(40% 0.12 330);
+  color: white;
+  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.05);
+}
+
+html[style*="color-scheme: dark"] header a {
+  color: oklch(85% 0.3 330);
+}
+
