--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
 gap: 1em;
 }
 
-.project {
+.projects {
 display: grid;
 grid-template-rows: subgrid;
 grid-row: span 3;
@@ -137,12 +137,12 @@ padding: 1em;
 }
 
 .projects article {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  padding: 1em;
-  border-radius: 0.5em;
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3;
+  h2 {
+    margin:0;
+  }
 }
 
 .projects article img {
@@ -151,14 +151,6 @@ padding: 1em;
   width: 100%;
   border-radius: 0.25em;
 }
-
-.projects article h2,
-.projects article h3,
-.projects article p {
-  margin: 0.5em 0;
-}
-
-
 
 
 h1 {
@@ -204,18 +196,18 @@ section ul li {
 
 #profile-stats dl {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Four equal columns */
+  grid-template-columns: repeat(4, 1fr); 
   text-align: center;
   margin-bottom: 2em;
 }
 
 #profile-stats dt {
-  grid-row: 1; /* Force all <dt>s into the first row */
+  grid-row: 1; 
   font-weight: bold;
 }
 
 #profile-stats dd {
-  grid-row: 2; /* Force all <dd>s into the second row */
+  grid-row: 2; 
   margin: 0;
 }
 
