--- a/style.css
+++ b/style.css
@@ -215,21 +215,21 @@ section ul li {
 #projects-pie-plot {
   max-width: 20em;
   margin-block: 2em;
-
+   
   overflow: visible;
+  height: auto;
 }
 
 .legend {
-  flex: 1;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(8em, 1fr));
   gap: 1em;
-  border: 1px solid oklch(50% 0.2 270 / 30%);
   padding: 1em;
-  margin: 0;
+  border: 1px solid oklch(50% 0.2 270 / 30%);
+  flex: 1;
   list-style: none;
-  flex-shrink: 0;
 }
+
 
 .legend-item {
   display: flex;
@@ -245,12 +245,22 @@ section ul li {
   background-color: var(--color);
 }
 
+.searchBar {
+  width: 100%;
+}
+
 .container {
   display: flex;
   align-items: center;
   gap: 2em;
-  margin-bottom: 2em;
   flex-wrap: nowrap;
-  min-width: 300px;
-  
-}
+  width: 100%;
+} 
+
+
+ 
+ 
+ 
+ 
+ 
+ 
