--- a/style.css
+++ b/style.css
@@ -257,10 +257,23 @@ section ul li {
   width: 100%;
 } 
 
+&:has(path:hover) {
+  path:not(:hover) {
+    opacity: 0.5;
+  }
+}
+ 
+path {
+  cursor: pointer;
+  transition: 300ms;
+}
+ 
+.selected {
+  --color: oklch(60% 45% 0) !important;
 
- 
- 
- 
- 
+  &:is(path) {
+    fill: var(--color);
+  }
+}
  
  
