--- a/style.css
+++ b/style.css
@@ -300,6 +300,31 @@ path {
   word-break: break-word;
 }
 
+#stats dl.stats {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(8em, 1fr));
+  text-align: center;
+  gap: 1em;
+  margin-block: 2em;
+}
+
+.stats dt {
+  grid-row: 1;
+  font-size: 0.75em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #666;
+  margin: 0;
+}
+
+.stats dd {
+  grid-row: 2;
+  font-size: 2em;
+  font-weight: 400;
+  margin: 0;
+  color: black;
+}
+
 .gridlines line{
   stroke-opacity: 0.15;
 }
@@ -351,10 +376,10 @@ circle {
   transition: 200ms;
   transform-origin: center;
   transform-box: fill-box;
+  /* transition: all 200ms, r calc(var(--r) * 100ms); */
   @starting-style {
     r: 0;
   }
-  transition: all 200ms, r calc(var(--r) * 100ms);
 }
 
 circle:hover {
@@ -393,4 +418,114 @@ circle.selected {
 #time-slider {
   width: 100%;       
   max-width: 600px; 
+}
+
+.line {
+  display: flex;
+  width: 0.5em;
+  aspect-ratio: 1;
+  border-radius: 50%;
+}
+
+.files dd {
+  grid-column: 2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: start;
+  align-content: start;
+  gap: 0.15em;
+  padding-top: 0.6em;
+  margin-left: 0;
+}
+
+:global(body) {
+  max-width: min(120ch, 80vw);
+}
+
+#scrollytelling {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+/* feel free to play with this to make your scrolly more seemless with your plot */
+#scroll-container {
+  grid-column: 1;
+  position: relative;
+  width: 95%;
+  height: 350px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  margin-bottom: 50px;
+}
+
+#chart {
+  grid-column: 2;
+}
+
+#spacer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: none; /* transparent */
+  pointer-events: none;
+}
+
+#items-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.item {
+  height: 190px;
+  padding: 10px;
+  box-sizing: border-box;
+  border-bottom: 2px solid #eee;
+}
+
+#file-scrollytelling {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: subgrid;
+  margin-top: 4em;
+}
+
+#file-scroll-container {
+  grid-column: 2;
+  position: relative;
+  width: 95%;
+  height: 350px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  margin-bottom: 50px;
+}
+
+.files {
+  grid-column: 1;
+}
+
+#file-spacer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: none;
+  pointer-events: none;
+}
+
+#file-items-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.file-item {
+  height: 60px;
+  padding: 10px;
+  box-sizing: border-box;
+  border-bottom: 2px solid #eee;
 }
